zig/test_run_3.log
test-jit
+- run exe test_jit
   +- compile exe test_jit Debug native 1 errors
src/vm/tests/test_jit.zig:40:57: error: @ptrCast increases pointer alignment
    const func: *const fn ([*]u256) callconv(.c) void = @ptrCast(func_ptr);
                                                        ^~~~~~~~~~~~~~~~~~
src/vm/tests/test_jit.zig:40:66: note: '*const anyopaque' has alignment '1'
    const func: *const fn ([*]u256) callconv(.c) void = @ptrCast(func_ptr);
                                                                 ^~~~~~~~
src/vm/tests/test_jit.zig:40:57: note: '*const fn ([*]u256) callconv(.c) void' has alignment '4'
src/vm/tests/test_jit.zig:40:57: note: use @alignCast to assert pointer alignment
referenced by:
    callMain [inlined]: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:627:37
    callMainWithArgs [inlined]: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:587:20
    main: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:602:28
    1 reference(s) hidden; use '-freference-trace=4' to see all references
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig build-exe -ODebug --dep stencils --dep jit_compiler -Mroot=/Users/karan/zephyria/zig/src/vm/tests/test_jit.zig -Mstencils=.zig-cache/o/899eeb472fab41f4d594e8a37594df15/src/vm/generated/stencils.zig --dep stencils -Mjit_compiler=/Users/karan/zephyria/zig/src/vm/jit_compiler.zig -lc --cache-dir .zig-cache --global-cache-dir /Users/karan/.cache/zig --name test_jit --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 4/7 steps succeeded; 1 failed
test-jit transitive failure
+- run exe test_jit transitive failure
   +- compile exe test_jit Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/26ef35733e12a97b045e2da944dce7ed/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/karan/zephyria/zig .zig-cache /Users/karan/.cache/zig --seed 0x9be85987 -Z1cdd3c87dfdd5215 test-jit
